--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,10 @@
     "CorsOrigins": "http://localhost:63098,http://localhost:4200,http://localhost:44303"
   },
   "AppSettings": {
-    "Secret": "73babbd46dfd40cd19ba5fb82023c5ed3537f341"
+    "Secret": "73babbd46dfd40cd19ba5fb82023c5ed3537f341",
+    "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+    "JwtIssuer": "http://localhost:8080",
+    "JwtExpireDays": 30
   },
   "ConnectionStrings": {
     "ASPDatabase": "Data Source=.\\SQLEXPRESS;Initial Catalog=ASPAngular;Integrated Security = True;Trusted_Connection=True;MultipleActiveResultSets=true"
